--- a/package.json
+++ b/package.json
@@ -6,12 +6,31 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "alpinejs": "^3.15.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
-    }
+        "laravel-vite-plugin": "^0.7.8",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
+        "vite": "^4.5.14"
+    },
+    "name": "laravel-point-of-sale",
+    "version": "1.0.0",
+    "description": "A simple and powerful Point of Sale (POS) management system with invoice generation, built with **Laravel 10** and **MySQL**.",
+    "main": "postcss.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nahnagib/POS_SYSTEM.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/nahnagib/POS_SYSTEM/issues"
+    },
+    "homepage": "https://github.com/nahnagib/POS_SYSTEM#readme"
 }
